Source/WebKit/UIProcess/WebPageProxy.h
@@ -1772,10 +1772,8 @@ public:
     bool hasQueuedKeyEvent() const;
     const NativeWebKeyboardEvent& firstQueuedKeyEvent() const;
 
-#if PLATFORM(IOS)
     void grantAccessToAssetServices();
     void revokeAccessToAssetServices();
-#endif
 
 #if PLATFORM(COCOA)
     void grantAccessToPreferenceService();
